@@ -1,3 +1,8 @@
+2011-07-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-toolbar-define-keys): No need to take care of
+	the tool-bar default bindings for Emacs 24.
+
 2011-07-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-ccl.el (charset-id): Work for old Emacsen.
